--- a/market-place-app/tsconfig.json
+++ b/market-place-app/tsconfig.json
@@ -20,7 +20,7 @@
       "@utils/*": ["utils/*"],
       "@components/*": ["components/*"],
       "@types/*": ["common/types/*"],
-      "@store/*": ["store/useCartStore/*"]
+      "@store/*": ["store/*"]
     },
     "plugins": [
       {
