--- a/market-place-app/package.json
+++ b/market-place-app/package.json
@@ -16,8 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6",
     "zukeeper": "^1.0.2",
     "zustand": "^5.0.1",
     "zustand-persist": "^0.4.0"
